--- a/config/locales/models/user.yml
+++ b/config/locales/models/user.yml
@@ -6,3 +6,4 @@ ja:
         email: 'メールアドレス'
         password: 'パスワード'
         password_confirmation: 'パスワード(確認)'
+        remember_me: 'ログインしたままにする'
