Add feature of account activation

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -21,6 +21,7 @@ ja:
   successfully_updated: '正常に更新されました。'
   successfully_deleted: '正常に削除されました。'
   successfully_processed: '正常に処理されました。'
+  successfully_activated: '正常に有効化されました。'
 
   login: 'ログイン'
   login_failed: 'ログインに失敗しました。'
@@ -30,6 +31,7 @@ ja:
   successfully_registered: '正常に登録されました。'
   already_registered: '既に登録されています。'
   password_mismatch: 'パスワードが一致しません。'
+  invalid_activation_link: '有効化のリンクが無効です。'
   sent_email_for_account_activation: 'アカウント有効化のためのメールを送信しました。'
 
   time:
