--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -18,6 +18,8 @@ ja:
   activate: '有効化'
   send: '送信'
   password_reset: 'パスワード再設定'
+  new_passwrod: '新しいパスワード'
+  new_passwrod_confirmation: '新しいパスワード(確認)'
 
   successfully_created: '正常に作成されました。'
   successfully_updated: '正常に更新されました。'
@@ -41,6 +43,10 @@ ja:
   send_password_reset_link: 'パスワード再設定用のリンクをお送りします。'
   sent_password_reset_link: 'パスワード再設定用のリンクをお送りしました。'
   email_address_not_found: 'メールアドレスが見つかりません。'
+  password_reset_has_expired: 'パスワードリセットの有効期限が切れています。'
+  retry_password_reset: '再度パスワードリセットの処理を行ってください。'
+  passwrod_has_been_reset: 'パスワードが更新されました。'
+  activate_account: 'アカウントの有効化を行ってください。'
 
   time:
     formats:
