--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -20,6 +20,8 @@ ja:
   password_reset: 'パスワード再設定'
   new_passwrod: '新しいパスワード'
   new_passwrod_confirmation: '新しいパスワード(確認)'
+  search_books: '書籍検索'
+  add_to_bookshelf: '本棚へ追加'
 
   successfully_created: '正常に作成されました。'
   successfully_updated: '正常に更新されました。'
