--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -50,6 +50,7 @@ ja:
   passwrod_has_been_reset: 'パスワードが更新されました。'
   activate_account: 'アカウントの有効化を行ってください。'
   added_to_bookshelf: '本棚へ追加しました。'
+  please_login: 'ログインしてください。'
 
   time:
     formats:
