--- a/config/locales/models/book.yml
+++ b/config/locales/models/book.yml
@@ -8,4 +8,4 @@ ja:
         authors: '著者'
         publisher: '出版社'
         published_date: '発売日'
-        description: '説明'
+        description: '作品紹介'
