--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -58,6 +58,7 @@ ja:
   already_added: '本棚へ追加済み'
   write_review: 'レビューを投稿する'
   follow_user: 'フォローする'
+  cannot_follow_yourself: '自分自身をフォローすることはできません。'
 
   time:
     formats:
