--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -22,6 +22,8 @@ ja:
   number_of_added_to_bookshelf: '本棚登録者数'
   number_of_reviews: 'レビュー数'
   write: '投稿'
+  following: 'フォロー'
+  follower: 'フォロワー'
 
   successfully_created: '正常に作成されました。'
   successfully_updated: '正常に更新されました。'
