--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -24,6 +24,7 @@ ja:
   write: '投稿'
   following: 'フォロー'
   follower: 'フォロワー'
+  profile: 'プロフィール'
 
   successfully_created: '正常に作成されました。'
   successfully_updated: '正常に更新されました。'
