Add feature of ranking for book

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -25,6 +25,7 @@ ja:
   following: 'フォロー'
   follower: 'フォロワー'
   profile: 'プロフィール'
+  ranking: 'ランキング'
 
   successfully_created: '正常に作成されました。'
   successfully_updated: '正常に更新されました。'
