Add feature of users#edit, #update

--- a/config/locales/models/user.yml
+++ b/config/locales/models/user.yml
@@ -4,7 +4,7 @@ ja:
       user: 'ユーザ'
     attributes:
       user:
-        name: 'ユーザ名'
+        name: 'ニックネーム'
         email: 'メールアドレス'
         password: 'パスワード'
         password_confirmation: 'パスワード(確認)'
