--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -67,6 +67,9 @@ ja:
   already_followed: 'フォロー中'
   cannot_follow_yourself: '自分自身をフォローすることはできません。'
   result_is_empty: '検索結果がありません。'
+  look_at_books: '書籍一覧を見る'
+  look_at_reviews: 'レビューを見る'
+  look_at_rankings: 'ランキングを見る'
 
   time:
     formats:
